# telegram-rps-bot

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ruff.yml
bot/: app.py  config.py  constants.py  handlers.py  utils.py
tests/: conftest.py  test_handlers.py
