[project]
name = "telegram-rpc-bot"
version = "0.1.0"
description = "A tiny Telegram bot to play Rock–Paper–Scissors, built just for fun."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.10.1",
    "python-telegram-bot>=22.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.15.0",
    "ruff>=0.13.0",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "I",    # isort
    "S",    # bandit
    "B",    # flake8-bugbear
    "FBT",  # flake8-boolean-trap
    "BLE",  # flake8-blind-except
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "ASYNC",# flake8-async
    "T10",  # flake8-debugger
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "PTH",  # flake8-use-pathlib
    "FIX",  # flake8-fixme
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests.py" = ["S101"]
"tests/**" = ["S101"]
